RTT-VMM: implement dual system running on realview-pb-a8
Signed-off-by: Grissiom <chaos.proton@gmail.com>
Signed-off-by: Bernard.Xiong <bernard.xiong@gmail.com>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -1164,6 +1164,7 @@ config ARM_TIMER_SP804
 	select HAVE_SCHED_CLOCK
 
 source arch/arm/mm/Kconfig
+source arch/arm/vmm/Kconfig
 
 config ARM_NR_BANKS
 	int
